<resources>
    <string name="app_name">Bargain Priced</string>
    <string name="action_sign_in">ENTRAR COM E-MAIL E SENHA</string>
    <string name="action_google">ENTRAR COM O GOOGLE</string>
    <string name="action_facebook">ENTRAR COM O FACEBOOK</string>
    <string name="TODO">TODO</string>
    <string name="prompt_ID">ID</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_recuperar">Recuperar</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="text_logOut_button">SAIR</string>
    <string name="text_email_sign_in_button">ENTRAR</string>
    <string name="text_recuperar_senha_button">ESQUECI MINHA SENHA</string>
    <string name="text_cadastrar_button">CADASTRAR</string>
    <string name="text_registrar_button">REGISTRAR</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="usuario_cadastrado">Usuario Cadastrado</string>
    <string name="erro_firebase">Erro ao acessar usuarios</string>
    <string name="deletar_usuario">Deletar Usuario</string>
    <string name="usuario_removido">Usuario Removido</string>
    <string name="atualizar_usuario">Atualizar Usuario</string>
    <string name="action_settings">Settings</string>
    <string name="no_text"> </string>
    <string name="profile_names">Display name</string>
    <string name="induce_smile">Bargain Priced</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_online">Online</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="country_location">Sao Paulo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="loading">Loading…</string>
    <item name="email_login_form" type="id"/>
    <item name="cadastro_confirm_password" type="id"/>

</resources>
