<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:id="@+id/main_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="8dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="8dp"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/main_sign_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/TODO"/>

            <Button
                android:id="@+id/action_sign_in_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@color/secondaryDarkColor"
                android:text="@string/action_sign_in"
                android:textAllCaps="true"
                android:textColor="@color/secondaryTextColor"
                android:textStyle="normal|bold" />

    <Button
        android:id="@+id/action_google_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#d32f2f"
        android:text="@string/action_google"
        android:textColor="@color/secondaryTextColor"
        android:textStyle="bold" />

    <Button
        android:id="@+id/action_facebook_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#0d47a1"
        android:text="@string/action_facebook"
        android:textColor="@color/secondaryTextColor"
        android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>